breaking bad solution; remember to add explanation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "vector": "cpp",
         "iostream": "cpp",
         "ostream": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "xhash": "cpp",
+        "xstring": "cpp"
     }
 }
